--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 # not necessary for Craft 3 (https://github.com/craftcms/craft/issues/26)
 /craft/storage/*
 !/craft/storage/rebrand
-/vendor
+vendor
+node_modules
