--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "craftcms/cms": "^4.4.0",
+    "misterbk/mix": "1.6.0",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
