--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@tailwindcss/typography": "^0.5.8",
     "alpinejs": "^3.4.2",
     "autoprefixer": "^10.4.14",
+    "browser-sync": "^2.29.1",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "esbuild-loader": "^2.18.0",
     "html-minifier": "^4.0.0",
     "laravel-mix": "^6.0.49",
